fix the position overflow problem; fix frontend illustration

--- a/ui/src/components/PreviewCanvas.css
+++ b/ui/src/components/PreviewCanvas.css
@@ -1,11 +1,14 @@
 .canvas-container {
   border: 2px solid black;
   width: 100%;
+  position: relative;
+  z-index: 10;
 }
 
 .preview-canvas {
   position: relative;
   width: 100%;
+  background-color: rgba(255, 0, 0, 0.2);
 }
 
 .preview-canvas::before {
@@ -25,4 +28,29 @@
   width: 100%;
   position: absolute;
   z-index: 1;
+}
+
+.canvas-limits {
+  background-color: white;
+  border-radius: 0 0 0 100%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.canvas-limits-round {
+  width: 100%;
+  height: 100%;
+  /*
+  rotate: 45deg;
+  border-radius: 100%;
+  border-right: 1px solid transparent;
+  border-bottom: 1px solid red;
+  border-left: 1px solid transparent;
+  border-top: 1px solid transparent;
+  */
+  
+  position: absolute;
+  left: 0px;
+  top: 0px;
 }
